<resources>
    <string name="app_name">NewApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="Name">Name</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_choose_card_templates">ChooseCardTemplates</string>
    <string name="title_activity_share_to_friends">ShareToFriends</string>
    <string name="setBackground">Background</string>
    <string name="share">Share</string>
    <string name="title_activity_enter_detals">EnterDetals</string>
    <string name="title_activity_choose_template">ChooseTemplate</string>
    <string name="title_activity_card_preview">CardPreview</string>
    <string name="cardName">CREATE CARD</string>
    <string name="emailAdress">emailAdress</string>
    <string name="designation">designation</string>
    <string name="name">name</string>
    <string name="welcome_message">\" Welcome to create your bussiness card \"</string>
    <string name="edit">edit</string>
</resources>
