<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.niki.newapp.Profile"
    tools:showIn="@layout/activity_profile">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/rcvd_name"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/welcometext"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/designation"
        android:id="@+id/rcvd_designation"
        android:layout_below="@+id/rcvd_name"
        android:layout_alignStart="@+id/rcvd_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emailAdress"
        android:id="@+id/rcvd_emailAdress"
        android:layout_gravity="center"
        android:layout_below="@+id/rcvd_designation"
        android:layout_alignStart="@+id/rcvd_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardName"
        android:id="@+id/bt_choose"
        android:typeface="monospace"
        android:textColor="#050e58"
        android:textSize="20sp"
        android:background="@drawable/ripple"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_message"
        android:id="@+id/welcometext"
        android:textAlignment="center"
        android:textColor="#090580"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/rcvd_name" />

</RelativeLayout>
